6.25_06
    - Forgot to define BOOTDEP macro.

6.25_05  Wed Dec 22 07:59:02 EST 2004
    - One of the 6.25 alphas broke BSD make.  It doesn't like "- @ command".
      Fixed by adding an $(IGNORE) macro.
    - 6.25 alphas caused a Makefile to be added to the dist.  Fixed.
    - The new cd() code needed to be dependent on dmake or nmake for
      Windows.  Not Win9x vs WinNT/XP.

6.25_04  Tue Dec 21 00:53:06 EST 2004
    - 6.25_03 was always rebuilding XS modules.

6.25_03  Mon Dec 20 23:04:22 EST 2004
    - dir_target() is back.  Now each directory to be created has its own 
      target like before, but no more .exists or blibdirs.ts files.  This
      ensures that each blib directory is created as necessary and fixes
      things like SVN's perl bindings.

6.25_02  Mon Dec 20 03:31:49 EST 2004
    - Set PM_FILTER as late as possible so it can see all the earlier
      macro definitions.  Necessary for challenged make implementations
      like nmake.  Should fix Mail::SpamAssassin installs on Win32.
      [rt.cpan.org 4545]
    - clean and realclean are now more careful about accidentally deleting
      directories instead of files.  [rt.cpan.org 6851]
    - small fix for parallel builds, make sure pm_to_blib has run before
      we try to use stuff in blib. [rt.cpan.org 6460]
    - MAKEFILE=foo appears to have been broken for recursive builds and
      several other things.  I think this was broken by 6.18.

6.25_01  Fri Dec 17 21:29:04 EST 2004
    * *.bak added to the default MANIFEST.SKIP.
    * META.yml will no longer be generated in the build directory.  It will
      only appear in the distdir.  This should make it easier on developers,
      they don't have to worry about checking the file in all the time.
    * Similarly, the SIGNATURE file will not be updated in the build 
      directory.  It will only be generated in the distdir.
    - A bunch of redundant Win9x and VMS code removed.