@@ -505,6 +505,14 @@ CODE
 Generates targets to create the specified directories and set its
 permission to 0755.
 
+Because depending on a directory to just ensure it exists doesn't work
+too well (the modified time changes too often) dir_target() creates a
+.exists file in the created directory.  It is this you should depend on.
+For portability purposes you should use the $(DIRFILESEP) macro rather
+than a '/' to seperate the directory from the file.
+
+    yourdirectory$(DIRFILESEP).exists
+
 =cut
 
 sub dir_target {
@@ -512,10 +520,14 @@ sub dir_target {
 
     my $make = '';
     foreach my $dir (@dirs) {
-        $make .= sprintf <<'MAKE', $dir, $dir, $dir;
-%s :
+        $make .= sprintf <<'MAKE', ($dir) x 7;
+%s : %s$(DFSEP).exists
+	$(NOECHO) $(NOOP)
+
+%s$(DFSEP).exists :
 	$(NOECHO) $(MKPATH) %s
 	$(NOECHO) $(CHMOD) 755 %s
+	$(NOECHO) touch %s$(DFSEP).exists
 
 MAKE
 
@@ -897,9 +909,9 @@ meaning to make.  For example, .SUFFIXES and .PHONY.
 
 sub special_targets {
     my $make_frag = <<'MAKE_FRAG';
-.SUFFIXES: .xs .c .C .cpp .i .s .cxx .cc $(OBJ_EXT)
+.SUFFIXES : .xs .c .C .cpp .i .s .cxx .cc $(OBJ_EXT)
 
-.PHONY: all config static dynamic test linkext manifest
+.PHONY :: all config static dynamic test linkext manifest
 
 MAKE_FRAG
 
